# apu_medication_support

./: CMakeLists.txt  Readme.md  package.xml
config/: locations.yaml
config/r203/: locations.yaml
config/rsh/: locations.yaml
data/: feature.txt
data/ex_1_case/: histgram_case_1.csv  histgram_case_10.csv  histgram_case_11.csv  histgram_case_12.csv  histgram_case_13.csv  histgram_case_14.csv  histgram_case_15.csv  histgram_case_16.csv  histgram_case_17.csv  histgram_case_18.csv  histgram_case_19.csv  histgram_case_2.csv  histgram_case_20.csv  histgram_case_3.csv  histgram_case_4.csv  histgram_case_5.csv  histgram_case_6.csv  histgram_case_7.csv  histgram_case_8.csv  histgram_case_9.csv  target_map_case_1.csv  target_map_case_10.csv  target_map_case_11.csv  target_map_case_12.csv  target_map_case_13.csv  target_map_case_14.csv  target_map_case_15.csv  target_map_case_16.csv  (+12 more)
docs/: CNAME  index.md
launch/: calendar.launch  carry_case.launch  carry_case_rsh.launch  egde_detection.launch  ex_2_transparent_detection.launch  ex_transparent_detection.launch  id_case.launch  identify_calendar.launch  identify_case.launch  identify_case_rsh.launch  medicine_calendar.launch  medicine_calendar_rsh.launch  mv_location.launch  tf_sample.launch  transparent_detection.launch
rviz/: carry_case.rviz  case_cluster.rviz  ex_transparent.rviz  identify_case.rviz  medicine_calendar.rviz  rsh_sample.rviz  sample.rviz  transparent.rviz
script/: carry_case_non_senser.py  carry_medicine_case.py  experiment.py  move_medicine_calendar.py  move_to_locations.py  move_to_map.py
src/: case_disturbance.cpp  discriminator.py  ex_2_identify_calendar.cpp  ex_2_transparent_detection.cpp  ex_identify_calendar.cpp  ex_plot.py  identify_calendar.cpp  identify_case.cpp  medicine_calendar.cpp  medicine_calendar_pcl.cpp  medicine_calendar_sample.cpp  memo.cpp  test  test.cpp  test.out  transparent_detection.cpp  transparent_detection__.cpp
(+217 files in other folders)
